Port of #71359 by hunmonk, fayerstarter: Fix overflowing commit messages for more browsers, and add a CVS Id to the CSS file.

--- a/commitlog/commitlog.css
+++ b/commitlog/commitlog.css
@@ -1,8 +1,12 @@
+/* $Id$ */
+
 #commitlog pre {
   margin-top: 0.6em;
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  word-wrap: break-word;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 #commitlog .items {
